@@ -7,7 +7,14 @@ collections.
 
 ## [1.2.1] - 2023-02-09
 
-### Added Select All / None actions to collections
+### Added
+
+- Select All / None actions to collections
+
+### Fixed
+
+- Settings/configuration was not saving
+- Restored KFC and Beta Wolf Pack icon fixes
 
 ## [1.2.0] - 2023-02-08
 
